--- a/Museum/Views/Admin/Edit.cshtml
+++ b/Museum/Views/Admin/Edit.cshtml
@@ -21,23 +21,23 @@
     </div>
 
     <div class="form-group row">
-        <label asp-for="Email" class="col-sm-2 col-form-label">Имя</label>
+        <label asp-for="Email" class="col-sm-2 col-form-label">Эл. почта</label>
         <div class="col-sm-10">
-            <input asp-for="Email" type="text" class="form-control" placeholder="Имя" />
+            <input asp-for="Email" type="text" class="form-control" placeholder="Эл. почта" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
-        <label asp-for="FirstName" class="col-sm-2 col-form-label">Фамилия</label>
+        <label asp-for="FirstName" class="col-sm-2 col-form-label">Имя</label>
         <div class="col-sm-10">
-            <input asp-for="FirstName" type="text" class="form-control" placeholder="Фамилия" />
+            <input asp-for="FirstName" type="text" class="form-control" placeholder="Имя" />
             <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
-        <label asp-for="LastName" class="col-sm-2 col-form-label">Эл. почта</label>
+        <label asp-for="LastName" class="col-sm-2 col-form-label">Фамилия</label>
         <div class="col-sm-10">
-            <input asp-for="LastName" type="text" class="form-control" placeholder="Email" />
+            <input asp-for="LastName" type="text" class="form-control" placeholder="Фамилия" />
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
     </div>
