--- a/Museum/Views/Exhibit/Index.cshtml
+++ b/Museum/Views/Exhibit/Index.cshtml
@@ -4,31 +4,20 @@
     ViewData["Title"] = "ЭКСПАНАТЫ";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Название
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descrition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhotoPath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IconPath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ExhibitCategoryName)
+                Категория
             </th>
             <th></th>
         </tr>
@@ -37,27 +26,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Descrition)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhotoPath)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IconPath)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.ExhibitCategoryName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Изменить", "Edit", new { id=item.Id  }) |
+                @Html.ActionLink("Подробнее", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Удалить", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
